[package]
name = "rsml-cli"
version = "0.0.18"
edition = "2024"

[dependencies]
# rbx-rsml = "1.0.2"
# rbx_types = "3.1.0"
rbx-rsml = { git = "https://github.com/rbx-rsml/rsml-rust.git", features = ["compiler"] }
rbx_types = { git = "https://github.com/cameronpcampbell/rbx-dom.git" }
serde_json = "1.0.143"
serde = "1.0.219"
memofs = "0.3.0"
crossbeam-channel = "0.5.14"
jod-thread = "1.0.0"
clap = { version = "4.5.45", features = ["derive", "cargo"] }
dunce = "1.0.5"

[dev-dependencies]
assert_cmd = "2"
